Optimized footer links, fixed up css

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,12 +7,12 @@ email: hello@avividvisual.com
 
 # NOTE: The Logo and Background image are defined in the all.sass document.
 
-# menu:
-# - {name: About Me, url: '#about-me'}
-# - {name: Work, url: '#work'}
-# - {name: Clients, url: '#clients'}
-# - {name: Contact, url: '#contact'}
-#
+menu:
+- {name: Work, url: '#'}
+- {name: About, url: '#'}
+- {name: Contact, url: '#'}
+- {name: Notes, url: '#'}
+
 #-------------------------------
 # SEO Section
 
