Added menu bars, stashed away for a later time when all the pages are set up

--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -10,8 +10,9 @@ email: hello@avividvisual.com
 menu:
 - {name: Work, url: '#'}
 - {name: About, url: '#'}
-- {name: Contact, url: '#'}
 - {name: Notes, url: '#'}
+- {name: Connect, url: '#'}
+
 
 #-------------------------------
 # SEO Section
