--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "http://www.avividvisual.com",
   "devDependencies": {
     "angular": "^1.5.0",
+    "angular-touch": "^1.5.3",
     "angular-ui-router": "^0.2.18",
     "browser-sync": "^2.11.1",
     "del": "^2.2.0",
